2004-04-14 James Turner <james@worldforge.org>

* Sort autoXXX compilation of tests

2004-03-22 James Turner <james@worldforge.org>

* Expand the tests, get more of them working (note you will need Atlas-C++ 0.6
  modifications at present, so best not to bother)
* Fix little bugs all over Player, since it's now being tested, very slightly.
  Login works, as does looking at characters.
* StubServer mechanics to support the above.
* Initial playing around towards registering Atlas factory methods for dynamic
  types, needs more Atlas API work to do anything.

2004-03-18 James Turner <james@worldforge.org>

* Make the stubServer uses sk_poll, so the login test is closer to working,
  at least data is moving over the stream now.

2004-03-17  Kai Blin  <blin@gmx.net>
* eris.dox.in: updated to work with a current version of doxygen

2004-03-16 James Turner <james@worldforge.org>

* Getting the in-progress test code to build, so it's not such
  an awesome task later. Note the tests still don't run, much less
  do anything, that should happen in the next few days.

2004-03-13 James Turner <james@worldforge.org>

* Remove debug nosie from BaseConnection and Metaserver
* Start adding test harness code, not currently compiled but soon.

2004-03-09  Al Riddoch  <alriddoch@zepler.org>

* Increment API version to 1.3 devel API. Next stable API will be 1.4.

2004-03-08  Al Riddoch  <alriddoch@zepler.org>

* Eris/Avatar.cpp, Eris/entityRouter.h, Eris/igRouter.cpp: Three files
  still missing newlines at the end.

Monday 8th March 2004, James Turner <james@worldforge.org>

* Final Linux fixes for Eris, including building the metaquery tool,
  which works!

Monday 8th March 2004, James Turner <james@worldforge.org>

* First round of Linux compilation fixes, many silly things
  all over the place.

Sunday 7th March 2004, James Turner <james@worldforge.org>

* More CVs file removal, and basic attempt to get autoconf builds working.
  No doubt more work will be necessary
