@@ -7,7 +7,7 @@
 #include <Eris/Log.h>
 #include <Eris/Person.h>
 #include <Eris/Player.h>
-#include <Eris/redispatch.h>
+#include <Eris/Redispatch.h>
 
 #include <sigc++/object_slot.h>
 
